2005-11-11  Albert Chu <chu11@llnl.gov>

	* fish/src/extensions.c, fish/src/scm-procedures.c: Revert changes
	made on 11/06/05.  Changes cause many things to break under
	RHEL3/RHEL4.
	
2005-11-10  Albert Chu <chu11@llnl.gov>

	* ipmipower/src/ipmi-privilege.h, ipmipower/src/ipmi-privilege.c:
	New files.

	* ipmipower/src/ipmipower.h, ipmipower/src/ipmipower.c (main),
	ipmipower/src/ipmipower_config.c (ipmipower_config_setup,
	ipmipower_config_cmdline_parse, _cb_privilege, _cb_outputtype),
	ipmipower/src/ipmipower_output.c (ipmipower_outputs),
	ipmipower/src/ipmipower_powercmd.c (ipmipower_powercmd_queue,
	_process_ipmi_packets), ipmipower/src/ipmipower_prompt.c
	(_cmd_advanced, _cmd_power, _cmd_privilege, _cmd_config): Support
	new --privilege option and equivalent interactive mode and config
	file options.

	* ipmipower/ipmipower.8.in, ipmipower/ipmipower.conf.5.in:
	Document support for privilege option.

	* ipmipower/src/ipmipower_auth.c (ipmipower_ipmi_auth_type): Fix
	error output typo.

	* ipmipower/src/Makefile.am: Add ipmipower-privilege.h and
	ipmipower-privilege.c.

	* ipmipower/src/ipmipower.h: Fix potential macro bugs.

	* libfreeipmi/src/ipmi-chassis-cmds.h,
	libfreeipmi/src/ipmi-hmac.h, libfreeipmi/src/ipmi-interface.h,
	libfreeipmi/src/ipmi-msg-support-cmds.h,
	libfreeipmi/src/ipmi-watchdog.h: Fix potential macro bugs.

	* freeipmi.spec.in: Update with new files.
	
2005-11-09  Albert Chu <chu11@llnl.gov>

	* ipmipower/src/ipmipower.h, ipmipower/src/ipmipower_config.c
	(ipmipower_config_setup, ipmipower_config_cmdline_parse,
	ipmipower_config_conffile_parse),
	ipmipower/src/ipmipower_powercmd.c (_process_ipmi_packets),
	ipmipower/src/ipmipower_prompt.c (_cmd_advanced, _cmd_config):
	Support new --force-permsg-auth option and equivalent interactive
	mode and config file options.

	* ipmipower/ipmipower.8.in, ipmipower/ipmipower.conf.5.in:
	Document support for force-permsg-auth.

	* ipmipower/ipmipower.8.in: Add forgotten documentation of